<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">司机打卡端</string>
    <string name="photo">photo</string>
    <string name="loading" tools:ignore="TypographyEllipsis">加载中...</string>
    <string name="sign">打  卡</string>
    <string name="driving_record">行车记录</string>
    <string name="personal">个人中心</string>
    <string name="click_exit">再按一下返回键退出</string>
    <string name="net_error">网络错误</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="personal_detail">个人信息</string>
    <string name="name">姓名:</string>
    <string name="phone_number">手机号:</string>
    <string name="phone_number1">手机号</string>
    <string name="put_phone_number">请输入手机号</string>
    <string name="set_always_spot">设置常跑站点</string>
    <string name="my_task">我的任务</string>
    <string name="my_notice">我的消息</string>
    <string name="always_spot">常跑站点</string>
    <string name="sex">性别</string>
    <string name="choice_sex">请选择性别</string>
    <string name="name1">姓名</string>
    <string name="password">密码</string>
    <string name="put_password">请输入密码</string>
    <string name="password1">密码:</string>
    <string name="head">头像</string>
    <string name="account">账号</string>
    <string name="save">保存</string>
    <string name="car_number">车牌号</string>
    <string name="car_number1">车牌号:</string>
    <string name="company">公司名称</string>
    <string name="age">年龄</string>
    <string name="change">修改</string>
    <string name="change_name">修改姓名</string>
    <string name="change_password">修改密码</string>
    <string name="put_old_password">输入旧的密码</string>
    <string name="put_new_password">输入新的密码</string>
    <string name="put_again_password">再次输入密码</string>
    <string name="password_style">密码支持6-14位字符，建议数字、字母组合</string>
    <string name="forget_password">忘记密码</string>
    <string name="reset_password">重置密码</string>
    <string name="old_password_short">原密码过短</string>
    <string name="password_short">密码过短</string>
    <string name="password_not_match">两次密码不一致</string>
    <string name="please_put">请输入您的</string>
    <string name="send_after">秒后重发</string>
    <string name="get_code">获取验证码</string>
    <string name="send_code_success">发送验证码成功</string>
    <string name="registered">注册</string>
    <string name="code_error">验证码错误</string>
    <string name="phone_error">手机号码错误</string>
    <string name="prompt">提示</string>
    <string name="have_register">手机号码已经注册，是否找回密码？</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="change_success">修改成功</string>
    <string name="register_success">注册成功</string>
    <string name="code">验证码</string>
    <string name="put_code">输入验证码</string>
    <string name="sure_password">确认密码</string>
    <string name="manage">管理</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="no_choice_station">没有选择站点</string>
    <string name="all_spot">所有站点</string>
    <string name="shift_sign">班次打卡</string>
    <string name="spot_sign">站点打卡</string>
    <string name="start_station">出发站点</string>
    <string name="start_station1">出发站点:</string>
    <string name="destination_station">目的站点</string>
    <string name="destination_station1">目的站点:</string>
    <string name="recent_shift">最近班次</string>
    <string name="often_station">常跑站点</string>
    <string name="start">省电\n模式</string>
    <string name="route_departure">路线偏离</string>
    <string name="times">运行总班次</string>
    <string name="reality_mileage">实际总里程(km)</string>
    <string name="plan_mileage">预设总里程(km)</string>
    <string name="start_sign_success">出发打卡成功</string>
    <string name="end_sign_success">到站打卡成功</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="passenger_number">乘客人数</string>
    <string name="exit_login">退出</string>
    <string name="login_success">登录成功</string>
    <string name="have_finish">已完成</string>
    <string name="not_finish">排班中</string>
    <string name="steam_car">待发车</string>
    <string name="wait_finish">待完成</string>
    <string name="no_message">暂无信息</string>
    <string name="no_departure">暂无偏离路线</string>
    <string name="message_detail">消息详情</string>
    <string name="recode_detail">行车记录详情</string>
    <string name="departure_recode_detail">偏离路线详情</string>
    <string name="get_permission_error">获取定位权限失败</string>
    <string name="no_shift">今日无班次</string>
    <string name="shift_time">班次时间:</string>
    <string name="location_false">定位失败，请稍后再试</string>
    <string name="save_model">省电模式</string>
    <string name="running">运行中...</string>
    <string name="run">运行中</string>
    <string name="notice">通知</string>
    <string name="software_updates">软件更新</string>
    <string name="install_prompt">安装提示</string>
    <string name="down_finish_install">软件已经下载完毕，是否现在安装?</string>
    <string name="have_down">已下载</string>
    <string name="install_apk">下载完成,点击安装</string>
    <string name="all_reward">本月汇总</string>
    <string name="times_reward">趟次绩效</string>
    <string name="no_reward">本日暂无绩效</string>
    <string name="set_current">设为当前</string>
    <string name="cancel_current">取消当前</string>
    <string name="use_introduce">打卡使用说明</string>
    <string name="other_station">备用站点</string>
    <string name="add_oil">录入油表里程</string>
    <string name="oil">油表里程</string>
    <string name="put_oil">请输入油表里程</string>
    <string name="put_car_number">请输入车牌号</string>
    <string name="tomorrow">明天</string>
    <string name="rolling">滚动</string>
    <string name="no_data">暂无数据</string>
    <string name="no_data1">暂无</string>
    <string name="network_error">网络连接错误</string>
    <string name="fresh_failure">刷新失败</string>
    <string name="reward">绩效</string>
    <string name="abnormal_depart_sign">出发未进入打卡范围,是否强行打卡?</string>
    <string name="abnormal_arrive_sign">确认结束异常班次?</string>
    <string name="last_mileage">上次录入里程</string>
    <string name="all_car">所有车牌</string>
    <string name="record_mileage">录入里程记录</string>
    <string name="load_finish">加载完成</string>
    <string name="itinerary">行程单</string>
    <string name="location_error">定位失败,请稍后再试</string>
    <string name="end_sign">到站打卡</string>
    <string name="start_sign">出发打卡</string>
    <string name="error_end">异常结束</string>
    <string name="error_sign">异常打卡成功</string>

    <string name="open_notification_tip">检测到您的手机未打开通知权限，为了获到准确的定位数据请进入通知管理页面打开。</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>

    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info_option">软检测到新版本，立即更新吗</string>
    <string name="soft_update_info_foced">你当前的版本过低，请立即更新</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">以后再说</string>
    <string name="soft_updating">正在更新</string>
    <string name="download">downloadId</string>
    <string name="circle_line_tips">当前班次为环线线路，该线路每个途径站都需打卡，请点击进入线路详情打卡。</string>
</resources>

