<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/item_head_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp45"
        android:layout_marginRight="@dimen/dp45"
        android:layout_marginTop="@dimen/dp57">

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_login_edit"
            android:hint="@string/put_old_password"
            android:maxLines="1"
            android:padding="@dimen/dp10"
            android:textColorHint="@color/CCCCCC"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/dp15" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_old_password"
            android:layout_marginTop="@dimen/dp25"
            android:background="@drawable/shape_login_edit"
            android:hint="@string/put_new_password"
            android:maxLines="1"
            android:padding="@dimen/dp10"
            android:textColorHint="@color/CCCCCC"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/dp15" />

        <EditText
            android:id="@+id/et_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_new_password"
            android:layout_marginTop="@dimen/dp25"
            android:background="@drawable/shape_login_edit"
            android:hint="@string/put_again_password"
            android:maxLines="1"
            android:padding="@dimen/dp10"
            android:textColorHint="@color/CCCCCC"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/dp15" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="@dimen/dp8"
        android:text="@string/password_style"
        android:textColor="@color/text_color_999999"
        android:textSize="@dimen/dp12" />

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp45"
        android:layout_marginRight="@dimen/dp45"
        android:layout_marginTop="@dimen/dp25"
        android:background="@drawable/login_button"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/dp10"
        android:text="@string/sure"
        android:textColor="@color/text_color_333333"
        android:textSize="@dimen/dp15" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp45"
        android:layout_marginRight="@dimen/dp45"
        android:layout_marginTop="@dimen/dp15"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp8"
            android:layout_toStartOf="@+id/tv_forget_password"
            android:background="#FDE33B" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/forget_password"
            android:textColor="#FDE33B"
            android:textSize="@dimen/dp14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp8"
            android:layout_toEndOf="@+id/tv_forget_password"
            android:background="#FDE33B" />

    </RelativeLayout>


</LinearLayout>
