<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/dp70"
        android:layout_marginStart="@dimen/dp70"
        android:background="@drawable/shape_small_round_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp5"
        android:paddingTop="@dimen/dp15">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp30"
            android:padding="@dimen/dp4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/dp15" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="李某某"
                android:textSize="@dimen/dp15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp30"
            android:padding="@dimen/dp4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_number1"
                android:textSize="@dimen/dp15" />

            <TextView
                android:id="@+id/tv_car_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="川A54465"
                android:textSize="@dimen/dp15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp30"
            android:padding="@dimen/dp4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_station1"
                android:textSize="@dimen/dp15" />

            <TextView
                android:id="@+id/tv_start_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="武侯祠"
                android:textSize="@dimen/dp15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp30"
            android:padding="@dimen/dp4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_station1"
                android:textSize="@dimen/dp15" />

            <TextView
                android:id="@+id/tv_end_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="都江堰"
                android:textSize="@dimen/dp15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/F7F7F7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_click_effect"
                android:gravity="center"
                android:padding="@dimen/dp5"
                android:text="@string/sure"
                android:textSize="@dimen/dp15" />

            <View
                android:layout_width="@dimen/dp1"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp2"
                android:background="@color/F7F7F7" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_click_effect"
                android:gravity="center"
                android:padding="@dimen/dp5"
                android:text="@string/cancel"
                android:textSize="@dimen/dp15" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
