<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/item_head_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp45"
        android:layout_marginStart="@dimen/dp45"
        android:layout_marginTop="@dimen/dp57"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_login_edit"
            android:hint="@string/put_phone_number"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/dp10"
            android:textColorHint="@color/CCCCCC"
            android:textSize="@dimen/dp15" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp25">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/put_code"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/dp10"
                android:textColorHint="@color/CCCCCC"
                android:textSize="@dimen/dp15" />

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp4"
                android:background="@drawable/shape_get_code"
                android:padding="@dimen/dp6"
                android:text="@string/get_code"
                android:textColor="@color/text_color_333333"
                android:textSize="@dimen/dp12" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp25">

            <EditText
                android:id="@+id/et_put_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/put_new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/dp10"
                android:textColorHint="@color/CCCCCC"
                android:textSize="@dimen/dp15" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp6"
                android:padding="@dimen/dp8"
                android:src="@mipmap/ic_show_password" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp25">

            <EditText
                android:id="@+id/et_sure_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/sure_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/dp10"
                android:textColorHint="@color/CCCCCC"
                android:textSize="@dimen/dp15" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp6"
                android:padding="@dimen/dp8"
                android:src="@mipmap/ic_show_password" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
