<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/item_head_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableEnd="@mipmap/ic_history_down"
            android:padding="@dimen/dp10"
            android:textColor="@color/text_color_333333"
            android:textSize="@dimen/dp15" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:layout_marginEnd="@dimen/dp12"
        android:layout_marginStart="@dimen/dp12"
        android:layout_marginTop="@dimen/dp15"
        android:background="@drawable/shape_small_round_background"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_reality_mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textColor="@color/text_color_333333"
                android:textSize="@dimen/dp18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp2"
                android:text="@string/reality_mileage"
                android:textSize="@dimen/dp12" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent"
            android:background="@color/F7F7F7" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textColor="@color/text_color_333333"
                android:textSize="@dimen/dp18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp2"
                android:text="@string/times"
                android:textSize="@dimen/dp12" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent"
            android:background="@color/F7F7F7" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textColor="@color/text_color_333333"
                android:textSize="@dimen/dp18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp2"
                android:text="@string/plan_mileage"
                android:textSize="@dimen/dp12" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lv_all_route_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:divider="@color/F7F7F7"
            android:dividerHeight="@dimen/dp8" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="暂无记录"
            android:textColor="@color/text_color_333333"
            android:textSize="@dimen/dp18"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
